--- a/app/src/main/res/layout/edit_user.xml
+++ b/app/src/main/res/layout/edit_user.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bookmytable.codemaveriks.myapplicationnew.secondActivity">
+    tools:context="com.bookmytable.codemaveriks.myapplicationnew.editUser">
 
     <EditText
         android:id="@+id/editText"
@@ -54,7 +54,8 @@
         app:layout_constraintHorizontal_bias="0.215"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="157dp" />
+        android:layout_marginTop="39dp"
+        app:layout_constraintTop_toBottomOf="@+id/editText" />
 
     <EditText
         android:id="@+id/editText2"
@@ -63,20 +64,26 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="New Contact Number"
-        tools:layout_editor_absoluteY="190dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.222" />
+        app:layout_constraintHorizontal_bias="0.222"
+        android:layout_marginTop="11dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save Changes"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="448dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="461dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.502" />
 
     <TextView
         android:id="@+id/textView7"
@@ -89,7 +96,8 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.206"
-        tools:layout_editor_absoluteY="271dp" />
+        android:layout_marginTop="35dp"
+        app:layout_constraintTop_toBottomOf="@+id/editText2" />
 
     <EditText
         android:id="@+id/editText3"
@@ -103,6 +111,7 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.222"
-        tools:layout_editor_absoluteY="307dp" />
+        android:layout_marginTop="11dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
 </android.support.constraint.ConstraintLayout>
